# day-6-task-app

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
src/: manage.py
src/authentication/: decorators.py  urls.py  views.py
src/authentication/templates/auth/: error.html  index.html
src/base/static/base/: output.css
src/base/templates/: base.html  header.html
src/blog/: admin.py  forms.py  models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py
src/blog/templates/blog/: comment.html  detail_post.html  index.html
src/landing/: urls.py  views.py
src/landing/templates/landing/: blogs.html  index.html
src/templates/: base.html  header.html
src/web_python/: asgi.py  settings.py  urls.py  wsgi.py
