[project]
name = "web_python"
version = "0.1.0"
description = "Web Python"
authors = [
    {name = "yosephbernandus", email = "yosephbernandus@gmail.com"},
]
dependencies = [
    "django>=5.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
