[project]
name = "web_python"
version = "0.1.0"
description = "Web Python"
authors = [
    {name = "yosephbernandus", email = "yosephbernandus@gmail.com"},
]
dependencies = [
    "django>=5.0.2",
    "granian>=1.1.0",
    "uvicorn>=0.27.1",
    "gunicorn>=21.2.0",
    "ipython>=8.22.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
